# monitoring4idiots

./: .gitignore  Dockerfile
.github/workflows/: docker-image.yml
client/: Cargo.toml  install.sh  monitoring4idiots.service  postinst
client/src/: core.rs  daemon.rs  main.rs  systeminfo.rs
docs/: api.md
docs/client/: somedocu.txt
web/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  package.json  vite.config.ts
web/messages/: de.json  en.json
web/prisma/: schema.prisma
web/prisma/migrations/20250716142653_init/: migration.sql
web/prisma/migrations/20250716143014_add_processor_info/: migration.sql
web/project.inlang/: project_id
web/scripts/: start-app.sh
web/src/: app.css  app.d.ts  hooks.server.ts
web/src/lib/: utils.ts
web/src/lib/components/: app-sidebar.svelte  chart-area-interactive.svelte  nav-user.svelte  site-header.svelte
web/src/lib/components/i18n/: index.ts  locale-switcher.svelte
web/src/lib/components/layout/: app-sidebar.svelte  nav-documents.svelte  nav-main.svelte  nav-secondary.svelte  nav-user.svelte  section-cards.svelte  site-header.svelte
web/src/lib/components/navigation/: index.ts  nav-main.svelte  (+1 more)
web/src/lib/schemas/: login.ts  register.ts
web/src/lib/server/: oauth.ts  prisma.ts  session.ts
web/src/lib/utils/: flash.ts  index.ts  password.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts
web/src/routes/app/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/auth/: +layout.svelte  +page.server.ts
web/web/: schema.prisma
(+33 files in other folders)
