[package]
name = "client"
version = "0.1.0"
edition = "2024"
authors = ["laurenz", "philipp"]

[dependencies]
daemonize = "0.5.0"
log = "0.4.22"
simplelog = "0.12.2"
signal-hook = "0.3.17"
sysinfo = "0.30.5"
thiserror = "2.0.12"
serde_json = "1.0.140"
http = "1.3.1"

[[bin]]
name = "monitoring4idiots"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "laurenz "
copyright = "2025 laurenz"
#license-file = ["LICENSE", "0"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/monitoring4idiots", "/usr/bin/monitoring4idiots", "755"],
    ["monitoring4idiots.service", "/etc/systemd/system/monitoring4idiots.service", "644"],
]
maintainer-scripts = "debian"
systemd-units = { enable = true, start = true, unit-name = "monitoring4idiots" }
